--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.7"
+axum = { version = "0.7", features = ["multipart"] } # Add multipart feature
 tokio = { version = "1.0", features = ["full"] }
 sqlx = { version = "0.7", features = [
     "runtime-tokio-rustls",
